Add Foreman 3.11.2 release notes

--- a/_includes/manuals/3.11/1.2_release_notes.md
+++ b/_includes/manuals/3.11/1.2_release_notes.md
@@ -43,6 +43,39 @@ Clients will remain supported.
 
 For more details and discussion, see https://community.theforeman.org/t/drop-support-for-running-on-el8-with-foreman-3-13/38083.
 
+### Release notes for 3.11.2
+#### Foreman - API
+* Host Creation via GraphQL only as Admin ([#37765](https://projects.theforeman.org/issues/37765))
+
+#### Foreman - Inventory
+* Invalid MAC address error message appears twice while editing interface ([#37651](https://projects.theforeman.org/issues/37651))
+
+#### Foreman - JavaScript stack
+* not all webpack assets are properly invalidated on change ([#37775](https://projects.theforeman.org/issues/37775))
+
+#### Foreman - Packaging
+* FFI 1.17.0+ requires Rubygems 3.3.22+ for installation, breaking Ruby 2.7 source installs ([#37607](https://projects.theforeman.org/issues/37607))
+
+#### Foreman - Plugin integration
+* Plugins are finalized before seeds are executed ([#37503](https://projects.theforeman.org/issues/37503))
+
+#### Foreman - Security
+* Connection reset by peer - SSL_connect when access to content/product menu ([#37713](https://projects.theforeman.org/issues/37713))
+
+#### Foreman - Tests
+* intermittent host_js integeration test failure:  test_0002_correctly override global params " Expected false to be truthy." ([#37774](https://projects.theforeman.org/issues/37774))
+* nic_managed factory can create an IP outside of its subnet ([#37711](https://projects.theforeman.org/issues/37711))
+
+#### Foreman - Web Interface
+* Template render error when host has .ics domain name ([#37623](https://projects.theforeman.org/issues/37623))
+* Help page should not link libera chat anymore after the migration to matrix ([#37086](https://projects.theforeman.org/issues/37086))
+
+#### Installer - Foreman modules
+* CVE-2024-7923: Authentication bypass in Pulpcore ([#37787](https://projects.theforeman.org/issues/37787))
+* CVE-2024-7012: Authentication bypass in Foreman ([#37786](https://projects.theforeman.org/issues/37786))
+
+*A full list of changes in 3.11.2 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1866)*
+
 ### Release notes for 3.11.1
 #### Foreman - Tests
 * Report renderer tests fail depending on the libyaml version ([#37613](https://projects.theforeman.org/issues/37613))
