Add Foreman 3.10.1 release notes

--- a/_includes/manuals/3.10/1.2_release_notes.md
+++ b/_includes/manuals/3.10/1.2_release_notes.md
@@ -26,6 +26,19 @@ Please use other backup types to replace your use of snapshot.
 
 ### Release Notes
 
+### Release notes for 3.10.1
+#### Foreman - Templates
+* foreman_bootdisk templates not seeded ([#37421](https://projects.theforeman.org/issues/37421))
+
+#### Foreman - Unattended installations
+* Cloudinit default generates invalid yaml output ([#37433](https://projects.theforeman.org/issues/37433))
+
+#### Installer - Foreman modules
+* CVE-2024-7923: Authentication bypass in Pulpcore ([#37787](https://projects.theforeman.org/issues/37787))
+* CVE-2024-7012: Authentication bypass in Foreman ([#37786](https://projects.theforeman.org/issues/37786))
+
+*A full list of changes in 3.10.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1881)*
+
 ### Release notes for 3.10.0
 #### Foreman
 * Some APIs / params are not marked as deprecated ([#37274](https://projects.theforeman.org/issues/37274))
