add 3.12 headline features to release notes

--- a/_includes/manuals/3.12/1.2_release_notes.md
+++ b/_includes/manuals/3.12/1.2_release_notes.md
@@ -4,9 +4,38 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### All Host index page improvements
+
+The experimental new All Hosts index page gets some major improvements with this release. To use the new page by default, in Settings, set Show new host overview page to Yes.
+The legacy All Hosts page and the new All Hosts page now have links to each other, so you can switch between them easily regardless of the setting value.
+Host bulk actions - You can now select one or more hosts and click the vertical ellipsis menu to perform the following actions:
+* Build management
+* Change host group
+* Delete
+Single-host actions - Additionally, you can click the vertical ellipsis in the rightmost table column (without selecting the host) and perform actions on a single host:
+* Edit
+* Clone
+* Delete
+Column selector - You can now click Manage Columns and customize columns displayed in the table. The column options are the same as those on the legacy All Hosts page. Any changes made here will also reflect on the legacy All Hosts page, and vice versa.
+
+For more details, see https://projects.theforeman.org/issues/37395, https://projects.theforeman.org/issues/37551, https://projects.theforeman.org/issues/37690, https://projects.theforeman.org/issues/37675, https://projects.theforeman.org/issues/37478, https://projects.theforeman.org/issues/37293.
+
+#### Puppet 8 support
+
+Foreman 3.12 now fully supports Puppet 8. While Foreman 3.11 unofficially supported Puppet 8, Puppet’s official puppetserver RPMs are known to break on Java. The installer now handles this for users. Users are encouraged to upgrade since Puppet 7 is expected to go end of life in February 2025.
+
+For more details, see https://projects.theforeman.org/issues/37686.
+
 ### Upgrade warnings
 
 ### Deprecations
+
+#### Port 8443 disabled by default
+
+On {SmartProxyServer}, the deprecated port 8443 has been disabled by default on new installations and upgrades. Clients are expected to be using port 443 when communicating through a {SmartProxyServer}. If there are older clients still using port 8443, they should be re-configured either by using remote execution, the katello-ca-consumer RPM, or updating /etc/rhsm/rhsm.conf using subscription-manager --port 443.
+For users that temporarily need access to port 8443 again, the installer can be executed with {foreman-installer} --foreman-proxy-content-reverse-proxy true. This should only be used as a temporary solution as port 8443 will be removed permanently in the next release.
+
+For more details, see https://projects.theforeman.org/issues/37701. 
 
 ### Release notes for 3.12.0
 
