--- a/_includes/manuals/3.12/1.2_release_notes.md
+++ b/_includes/manuals/3.12/1.2_release_notes.md
@@ -30,19 +30,28 @@ For more details, see https://projects.theforeman.org/issues/37686.
 
 ### Deprecations
 
-#### Port 8443 disabled by default
+#### Running Foreman on {EL} 8 removal in Foreman 3.13
 
-On {SmartProxyServer}, the deprecated port 8443 has been disabled by default on new installations and upgrades. Clients are expected to be using port 443 when communicating through a {SmartProxyServer}. If there are older clients still using port 8443, they should be re-configured either by using remote execution, the katello-ca-consumer RPM, or updating /etc/rhsm/rhsm.conf using subscription-manager --port 443.
-For users that temporarily need access to port 8443 again, the installer can be executed with {foreman-installer} --foreman-proxy-content-reverse-proxy true. This should only be used as a temporary solution as port 8443 will be removed permanently in the next release.
+Running on {EL} 8 is deprecated since Foreman 3.11.
+Foreman 3.13 will drop this support so users are encouraged to plan their {UpgradingDocURL}upgrading_EL_on_foreman_or_proxy_upgrading-connected[upgrade].
 
-For more details, see https://projects.theforeman.org/issues/37701. 
+Note this is for running Foreman itself.
+Clients will remain supported.
+
+For more details and discussion, see https://community.theforeman.org/t/drop-support-for-running-on-el8-with-foreman-3-13/38083. 
+
+A full list of changes in 3.12.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1836)*
 
 ### Release notes for 3.12.0
 
 #### Foreman
+* Bulk Packages wizard - Host search bleeds into package/errata search ([#37768](https://projects.theforeman.org/issues/37768))
+* User search filter for auth_source_type returns error code 500 ([#37767](https://projects.theforeman.org/issues/37767))
 * Fix audit message about removing records ([#37734](https://projects.theforeman.org/issues/37734))
+* Move telemetry allowed_labels to settings ([#37647](https://projects.theforeman.org/issues/37647))
 
 #### Foreman - API
+* Host Creation via GraphQL only as Admin ([#37765](https://projects.theforeman.org/issues/37765))
 * per_page=all doesn't work for parameters of subnets, domains, organizations.... ([#37550](https://projects.theforeman.org/issues/37550))
 
 #### Foreman - Compute resources - VMware
@@ -61,6 +70,9 @@ For more details, see https://projects.theforeman.org/issues/37701.
 
 #### Foreman - Facts
 * Fix parsing of Ubuntu version in fact parsers ([#36547](https://projects.theforeman.org/issues/36547))
+
+#### Foreman - Host creation
+* Host create form - UI improvements ([#37519](https://projects.theforeman.org/issues/37519))
 
 #### Foreman - Host registration
 * Host remains in build mode during registration when setup_insights is set to true ([#37720](https://projects.theforeman.org/issues/37720))
@@ -83,6 +95,7 @@ For more details, see https://projects.theforeman.org/issues/37701.
 * As a web UI user, I can select multiple hosts and perform build actions ([#37395](https://projects.theforeman.org/issues/37395))
 
 #### Foreman - JavaScript stack
+* not all webpack assets are properly invalidated on change ([#37775](https://projects.theforeman.org/issues/37775))
 * Drop coffee-rails dependency ([#37583](https://projects.theforeman.org/issues/37583))
 * Change I18n loading from import to require  ([#37300](https://projects.theforeman.org/issues/37300))
 
@@ -107,10 +120,12 @@ For more details, see https://projects.theforeman.org/issues/37701.
 * Append domain name setting is not consistently applied everywhere ([#37532](https://projects.theforeman.org/issues/37532))
 
 #### Foreman - Templates
+* subscription_manager_setup.erb doesn't point to correct host ([#37769](https://projects.theforeman.org/issues/37769))
 * Create a way to refresh CA certificates on hosts that are managed by Katello ([#37601](https://projects.theforeman.org/issues/37601))
 * Track original template when cloning templates ([#37059](https://projects.theforeman.org/issues/37059))
 
 #### Foreman - Tests
+* intermittent host_js integeration test failure:  test_0002_correctly override global params " Expected false to be truthy." ([#37774](https://projects.theforeman.org/issues/37774))
 * nic_managed factory can create an IP outside of its subnet ([#37711](https://projects.theforeman.org/issues/37711))
 * Report renderer tests fail depending on the libyaml version ([#37613](https://projects.theforeman.org/issues/37613))
 * with_temporary_settings test helper doesn't clean up properly ([#37558](https://projects.theforeman.org/issues/37558))
@@ -123,13 +138,13 @@ For more details, see https://projects.theforeman.org/issues/37701.
 * Provisioning Templates or RHEL 9 should have option timesource ([#37581](https://projects.theforeman.org/issues/37581))
 * Improved "EFI local chainloading" on SecureBoot enabled hosts not working for all distribution ([#37562](https://projects.theforeman.org/issues/37562))
 * RHEL registration template ignores host_parm subscription_manager_org  ([#37496](https://projects.theforeman.org/issues/37496))
-* Cloudinit default generates invalid yaml output ([#37433](https://projects.theforeman.org/issues/37433))
 * Improve "EFI local chainloading" on SecureBoot enabled hosts ([#37345](https://projects.theforeman.org/issues/37345))
 * Upload facts after host provisioning ([#36886](https://projects.theforeman.org/issues/36886))
 * Template render error when no PXELoader is selected ([#36626](https://projects.theforeman.org/issues/36626))
 * Extend Windows support in templates ([#36495](https://projects.theforeman.org/issues/36495))
 
 #### Foreman - Web Interface
+* Pagination doesn't re-render a table when switching pages ([#37770](https://projects.theforeman.org/issues/37770))
 * Show complete hostgroup name in host overview and table ([#37648](https://projects.theforeman.org/issues/37648))
 * Tab title missing in tableindexpage ([#37645](https://projects.theforeman.org/issues/37645))
 * Pagination doesnt always update between react pages ([#37644](https://projects.theforeman.org/issues/37644))
@@ -144,6 +159,8 @@ For more details, see https://projects.theforeman.org/issues/37701.
 * Disable port 8443 by default on content proxies ([#37701](https://projects.theforeman.org/issues/37701))
 
 #### Installer - Foreman modules
+* CVE-2024-7923: Authentication bypass in Pulpcore ([#37787](https://projects.theforeman.org/issues/37787))
+* CVE-2024-7012: Authentication bypass in Foreman ([#37786](https://projects.theforeman.org/issues/37786))
 * Pasing --foreman-proxy-content-enable-docker false can leave smart_proxy_container_gateway in an inconsistent state ([#37707](https://projects.theforeman.org/issues/37707))
 * Correct docroot for Content Proxies's Apache vhost ([#37620](https://projects.theforeman.org/issues/37620))
 * DNS forwarders aren't validated ([#37604](https://projects.theforeman.org/issues/37604))
