remove macros from release notes

--- a/_includes/manuals/3.12/1.2_release_notes.md
+++ b/_includes/manuals/3.12/1.2_release_notes.md
@@ -32,15 +32,15 @@ For more details, see https://projects.theforeman.org/issues/37686.
 
 #### Running Foreman on {EL} 8 removal in Foreman 3.13
 
-Running on {EL} 8 is deprecated since Foreman 3.11.
-Foreman 3.13 will drop this support so users are encouraged to plan their {UpgradingDocURL}upgrading_EL_on_foreman_or_proxy_upgrading-connected[upgrade].
+Running on Enterprise Linux 8 is deprecated since Foreman 3.11.
+Foreman 3.13 will drop this support so users are encouraged to plan their upgrade.
 
 Note this is for running Foreman itself.
 Clients will remain supported.
 
 For more details and discussion, see https://community.theforeman.org/t/drop-support-for-running-on-el8-with-foreman-3-13/38083. 
 
-A full list of changes in 3.12.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1836)*
+A full list of changes in 3.12.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1836)
 
 ### Release notes for 3.12.0
 
