--- a/_includes/manuals/3.12/1.2_release_notes.md
+++ b/_includes/manuals/3.12/1.2_release_notes.md
@@ -30,7 +30,7 @@ For more details, see https://projects.theforeman.org/issues/37686.
 
 ### Deprecations
 
-#### Running Foreman on {EL} 8 removal in Foreman 3.13
+#### Running Foreman on Enterprise Linux 8 removal in Foreman 3.13
 
 Running on Enterprise Linux 8 is deprecated since Foreman 3.11.
 Foreman 3.13 will drop this support so users are encouraged to plan their upgrade.
