update installer options

--- a/_includes/manuals/3.12/3.2.2_installer_options.md
+++ b/_includes/manuals/3.12/3.2.2_installer_options.md
@@ -146,6 +146,10 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_google' puppet module (<a href="https://github.com/theforeman/foreman_google">foreman_google</a>)</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-hdm</td>
+        <td>Enable 'foreman_plugin_hdm' puppet module (<a href="https://github.com/theforeman/foreman_hdm">foreman_hdm</a>)</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-host-extra-validator</td>
         <td>Enable 'foreman_plugin_host_extra_validator' puppet module (<a href="https://github.com/theforeman/foreman_host_extra_validator">foreman_host_extra_validator</a>)</td>
       </tr>
@@ -290,6 +294,10 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_proxy_plugin_dynflow' puppet module (<a href="https://github.com/theforeman/smart_proxy_dynflow">smart_proxy_dynflow</a>)</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-hdm</td>
+        <td>Enable 'foreman_proxy_plugin_hdm' puppet module (<a href="https://github.com/theforeman/smart_proxy_hdm">smart_proxy_hdm</a>)</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-monitoring</td>
         <td>Enable 'foreman_proxy_plugin_monitoring' puppet module (<a href="https://github.com/theforeman/smart_proxy_monitoring">smart_proxy_monitoring</a>)</td>
       </tr>
@@ -317,6 +325,7 @@ More information about compute resources can be found in the [Compute Resources 
   </table>
 </div>
 
+
 #### Available options
 
 **Note:** When you can specify a hash, you need to specify each option individually to `foreman-installer`.
@@ -341,7 +350,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--apache-mod-status-requires</td>
-        <td>A Variant type that can be: - String with: - '' or 'unmanaged' - Host auth control done elsewhere - 'ip &lt;List of IPs>&gt;' - Allowed IPs/ranges - 'host &lt;List of names&gt;' - Allowed names/domains - 'all [granted|denied]' - Array of strings with ip or host as above - Hash with following keys: - 'requires' - Value => Array as above - 'enforce' - Value => String 'Any', 'All' or 'None' This encloses "Require" directives in "<Require(Any|All|None)>" block Optional - If unspecified, "Require" directives follow current flow</td>
+        <td>A Variant type that can be: - String with: - '' or 'unmanaged' - Host auth control done elsewhere - 'ip <List of IPs>' - Allowed IPs/ranges - 'host <List of names>' - Allowed names/domains - 'all [granted|denied]' - Array of strings with ip or host as above - Hash with following keys: - 'requires' - Value => Array as above - 'enforce' - Value => String 'Any', 'All' or 'None' This encloses "Require" directives in "<Require(Any|All|None)>" block Optional - If unspecified, "Require" directives follow current flow</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--apache-mod-status-status-path</td>
@@ -1428,10 +1437,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>The time an agent waits for one block to be read from an HTTP connection. If nothing is read after the elapsed interval then the connection will be closed.</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--puppet-localconfig</td>
-        <td>The localconfig setting.</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--puppet-logdir</td>
         <td>Override the log directory.</td>
       </tr>
@@ -2280,6 +2285,30 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Disable TLS versions. Version 1.0 is always disabled. For example: ['1.1']</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-enabled</td>
+        <td>enables/disables the HDM plugin</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-hdm-password</td>
+        <td>password of the HDM API user - can be ommited if HDM runs unauthenticated</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-hdm-url</td>
+        <td>the API endpoint of your HDM installation</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-hdm-user</td>
+        <td>email address of the API-role user inside of HDM - can be ommited if HDM runs unauthenticated</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-listen-on</td>
+        <td>proxy feature listens on http, https, or both</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-version</td>
+        <td>plugin package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-monitoring-collect-status</td>
         <td>collect monitoring status from monitoring solution</td>
       </tr>
@@ -2518,6 +2547,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
     </tbody>
   </table>
 </div>
+
 
 #### Answers file
 
