--- a/_includes/manuals/3.12/3.2.2_installer_options.md
+++ b/_includes/manuals/3.12/3.2.2_installer_options.md
@@ -349,7 +349,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--apache-mod-status-requires</td>
-        <td>A Variant type that can be: - String with: - '' or 'unmanaged' - Host auth control done elsewhere - 'ip &lt;List of IPs>&gt;' - Allowed IPs/ranges - 'host &lt;List of names&gt;' - Allowed names/domains - 'all [granted|denied]' - Array of strings with ip or host as above - Hash with following keys: - 'requires' - Value => Array as above - 'enforce' - Value => String 'Any', 'All' or 'None' This encloses "Require" directives in "<Require(Any|All|None)>" block Optional - If unspecified, "Require" directives follow current flow</td>>
+        <td>A Variant type that can be: - String with: - '' or 'unmanaged' - Host auth control done elsewhere - 'ip &lt;List of IPs>&gt;' - Allowed IPs/ranges - 'host &lt;List of names&gt;' - Allowed names/domains - 'all [granted|denied]' - Array of strings with ip or host as above - Hash with following keys: - 'requires' - Value => Array as above - 'enforce' - Value => String 'Any', 'All' or 'None' This encloses "Require" directives in "<Require(Any|All|None)>" block Optional - If unspecified, "Require" directives follow current flow</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--apache-mod-status-status-path</td>
